ui/scss/component/_file-render.scss
/* ... */
.file-page__video-container {
  max-height: var(--desktop-portrait-player-max-height);
}

.file-render {
  width: 100%;
  height: 100%;
  z-index: 1;
  overflow: hidden;

  @media (max-width: $breakpoint-small) {
    max-height: var(--mobile-player-max-height);
  }
}

.file-render--video {
  background-color: black;
  border-radius: var(--border-radius);

  &:after {
    content: '';
    position: absolute;
    background-color: black;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2;
    animation: fadeInFromBlack 2s ease;
    opacity: 0;
    pointer-events: none;
  }

  @media (max-width: $breakpoint-small) {
    border-radius: unset;
    .autoplay-countdown {
      .file-viewer__overlay-secondary {
        margin-bottom: 0 !important;
      }
      .autoplay-countdown__counter {
        margin-top: var(--spacing-xxs) !important;
      }
    }
  }
}

@keyframes fadeInFromBlack {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.file-render--embed {
  border-radius: 0;
  position: fixed;
  max-height: none;
}

.file-render__img-container {
  width: 100%;
  aspect-ratio: 16 / 9;
  background-color: var(--color-placeholder-background);
  // background-color: rgba(25,25,25,0.4);
  border-radius: var(--border-radius);
}

.file-render--post-container {
  min-height: 30vh;
  margin: var(--spacing-s) 0;
}

.file-render__header {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.file-viewer {
  width: 100%;
  height: 100%;

  iframe,
  webview,
  img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    max-height: var(--inline-player-max-height);
  }
  video {
    cursor: pointer;
  }
  .video-js.vjs-user-inactive.vjs-playing {
    video {
      cursor: none;
    }
  }
}

.file-render__viewer--comic {
  position: relative;
  overflow: hidden;
  .comic-viewer {
    width: 100%;
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
    max-height: var(--inline-player-max-height);
  }
}

.file-viewer--iframe {
  display: flex; /*this eliminates extra height from whitespace, if someone edits this with a better technique, tell Jeremy*/
  /*
  ideally iframes would dynamiclly grow, see <IframeReact> for a start at this
  for now, since we don't know size, let's make as large as we can without being larger than available area
  */
  iframe {
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
  }
}

.file-render__viewer--three {
  position: relative;
  overflow: hidden;

  .three-viewer {
    height: calc(100vh - var(--header-height) - var(--spacing-m) * 2);
    max-height: var(--inline-player-max-height);
  }
}

.file-viewer__overlay {
  position: absolute;
  left: auto;
  right: auto;
  height: 100%;
  width: 100%;
  z-index: 2;
  color: var(--color-white);
  font-size: var(--font-body); /* put back font size from videojs change*/

  background-color: rgba(0, 0, 0, 0.9);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: var(--spacing-l);

  @media (max-width: $breakpoint-small) {
    font-size: var(--font-small);
  }

  .button--uri-indicator,
  .button--link {
    color: var(--color-white);
  }
}

.file-viewer_embed-ended-title {
  max-width: 100%;
  p {
    font-size: 6vh;
    white-space: pre-wrap;
  }
}

.content__viewer--floating {
  .file-viewer__overlay-title,
  .file-viewer__overlay-secondary {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
  }
}
@media (max-width: $breakpoint-small) {
  .file-viewer__overlay-title,
  .file-viewer__overlay-secondary {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
  }
}

.file-viewer__overlay-title {
  text-align: center;
  font-size: var(--font-large);
  margin-bottom: var(--spacing-m);
}
.file-viewer__overlay-secondary {
  color: var(--color-text-subtitle);
  margin-bottom: var(--spacing-m);
}
.file-viewer__overlay-actions {
  .button + .button {
    margin-left: var(--spacing-m);
  }

  .button--link {
    vertical-align: middle;
  }
}

.file-viewer__overlay-logo {
  color: var(--color-white);
  font-weight: bold;

  .icon {
    height: 30px;
    stroke-width: 5px;
  }
}

.file-viewer--is-playing:not(:hover) .file-viewer__embedded-header {
  display: none;
}

.file-viewer__embedded-header {
  position: absolute;
  display: grid;
  grid-template-columns: minmax(5rem, calc(100% - 7rem)) 1fr;
  width: 100%;
  top: 0;
  opacity: 1;
  z-index: 2;
  font-size: var(--font-large);
  overflow-x: hidden;
  overflow-y: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);

  .button {
    padding: var(--spacing-xxs);
    color: var(--color-white);
    z-index: 2;

    .button__label {
      white-space: nowrap;
    }

    &:hover {
      color: var(--color-white);
    }
  }

  .credit-amount,
  .icon--Key {
    margin-right: var(--spacing-m);
  }

  @media (min-width: $breakpoint-small) {
    padding: 0 var(--spacing-l);
  }
}

.file-viewer__embedded-gradient {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
  background: linear-gradient(#000000, #00000000 70%);
  height: 75px;
  z-index: 1;
}

.file-viewer__embedded-title {
  z-index: 2;
  display: flex;
  align-items: center;
  padding-left: var(--spacing-s);
  color: white;
}

.file-viewer__embedded-info {
  justify-self: flex-end;

  & > *:not(:last-child) {
    margin-right: var(--spacing-s);
  }
}

.file-render__content {
  width: 100%;
  height: 100%;
  overflow: auto;
  max-width: 100vw;
}
/* ... */

